[gd_scene load_steps=36 format=2]

[ext_resource path="res://Models/Selection/Limo Selection.tscn" type="PackedScene" id=1]
[ext_resource path="res://Animations/Garage/UI/VEHICLELOCKED.png" type="Texture" id=2]
[ext_resource path="res://DigitalTechMenu/GarageLabels/Asset 77.png" type="Texture" id=3]
[ext_resource path="res://Models/Podium.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Garage.gd" type="Script" id=5]
[ext_resource path="res://Models/Selection/6x6-Selection.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/selection swapping.tscn" type="PackedScene" id=7]
[ext_resource path="res://Models/Selection/SportsCar.tscn" type="PackedScene" id=8]
[ext_resource path="res://Models/Selection/SUV.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/selection swapping.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Loadscene.gd" type="Script" id=11]
[ext_resource path="res://Models/Selection/Nissian-Selection.tscn" type="PackedScene" id=12]
[ext_resource path="res://Models/Selection/BMW-Selection.tscn" type="PackedScene" id=13]
[ext_resource path="res://DigitalTechMenu/GarageLabels/6x6_label_untick.png" type="Texture" id=14]
[ext_resource path="res://Models/GarageBG.tscn" type="PackedScene" id=15]
[ext_resource path="res://DigitalTechMenu/GarageLabels/bmw_label_tick.png" type="Texture" id=16]
[ext_resource path="res://DigitalTechMenu/GarageLabels/Suv_label_untick.png" type="Texture" id=17]
[ext_resource path="res://DigitalTechMenu/GarageLabels/Limo_label_untick.png" type="Texture" id=18]
[ext_resource path="res://DigitalTechMenu/GarageLabels/Limo_label_tick.png" type="Texture" id=19]
[ext_resource path="res://DigitalTechMenu/GarageLabels/Nissian_label_tick.png" type="Texture" id=20]
[ext_resource path="res://DigitalTechMenu/GarageLabels/bmw_label_untick.png" type="Texture" id=21]
[ext_resource path="res://DigitalTechMenu/GarageLabels/6x6_label_tick.png" type="Texture" id=22]
[ext_resource path="res://DigitalTechMenu/GarageLabels/Nissian_label_untick.png" type="Texture" id=23]
[ext_resource path="res://DigitalTechMenu/GarageLabels/Suv_label_tick.png" type="Texture" id=24]
[ext_resource path="res://DigitalTechMenu/GarageLabels/Asset 72.png" type="Texture" id=25]
[ext_resource path="res://DigitalTechMenu/GarageLabels/Asset 87.png" type="Texture" id=26]
[ext_resource path="res://DigitalTechMenu/GarageLabels/Asset 75.png" type="Texture" id=27]
[ext_resource path="res://DigitalTechMenu/GarageLabels/Asset 89.png" type="Texture" id=28]
[ext_resource path="res://DigitalTechMenu/GarageLabels/Asset 73.png" type="Texture" id=29]
[ext_resource path="res://DigitalTechMenu/GarageLabels/Asset 74.png" type="Texture" id=30]
[ext_resource path="res://DigitalTechMenu/GarageLabels/Asset 88.png" type="Texture" id=31]
[ext_resource path="res://DigitalTechMenu/GarageLabels/Asset 90.png" type="Texture" id=32]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
params_cull_mode = 2
albedo_color = Color( 0.906332, 0.906332, 0.906332, 1 )
roughness = 0.5

[node name="Garage Car Selection" type="Spatial"]
script = ExtResource( 5 )

[node name="Exitarget" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.31752, 32.5138 )
mesh = SubResource( 1 )
material/0 = null

[node name="Exitarget2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.31752, -77.4862 )
mesh = SubResource( 1 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 50, 0, 0, 0, 1, 0, 0, 0, 50, 5.22684, -0.419079, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, -17.923, 5.699, -4.019 )

[node name="SUV" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, -32 )

[node name="SUV" parent="SUV" index="0"]
transform = Transform( 1.25, 0, 0, 0, 1.25, 0, 0, 0, 1.25, 0, 0, -20 )

[node name="AnimationPlayer" parent="SUV/SUV" index="0"]
playback_speed = 2.5

[node name="ChangingVehicles" type="Timer" parent="."]
wait_time = 2.0

[node name="Selection" parent="." instance=ExtResource( 7 )]
position = Vector2( 518.844, 100.691 )
script = ExtResource( 10 )

[node name="Loadscene" type="TextureButton" parent="."]
margin_left = 464.287
margin_top = 471.943
margin_right = 680.287
margin_bottom = 677.943
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 26 )
texture_hover = ExtResource( 27 )
texture_disabled = ExtResource( 32 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VEHICLELOCKED" type="Sprite" parent="Loadscene"]
position = Vector2( 146.191, -723.308 )
texture = ExtResource( 2 )

[node name="next" type="TextureButton" parent="."]
margin_left = 863.922
margin_top = 471.943
margin_right = 1079.92
margin_bottom = 677.943
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 30 )
texture_pressed = ExtResource( 28 )
texture_hover = ExtResource( 3 )

[node name="Previous" type="TextureButton" parent="."]
margin_left = 52.3844
margin_top = 471.943
margin_right = 268.384
margin_bottom = 677.943
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SportsCar" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1, -32 )

[node name="SportsCar" parent="SportsCar" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20 )

[node name="AnimationPlayer" parent="SportsCar/SportsCar" index="0"]
playback_speed = 2.5

[node name="SixbySix" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -32 )

[node name="SixbySix" parent="SixbySix" index="0"]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, -20 )
entering = true

[node name="AnimationPlayer" parent="SixbySix/SixbySix" index="0"]
playback_speed = 2.5

[node name="Nissian" parent="." instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1, -32 )

[node name="Nissian" parent="Nissian" index="0"]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, -20 )

[node name="AnimationPlayer" parent="Nissian/Nissian" index="0"]
playback_speed = 2.5

[node name="BMW" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -32 )

[node name="BMW" parent="BMW" index="0"]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, -20 )
entering = true

[node name="AnimationPlayer" parent="BMW/BMW" index="0"]
playback_speed = 2.5

[node name="Limo" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -32 )

[node name="Limo" parent="Limo" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20 )
entering = true
exiting = true

[node name="AnimationPlayer" parent="Limo/Limo" index="0"]
playback_speed = 2.5

[node name="GarageBG" parent="." instance=ExtResource( 15 )]
transform = Transform( -0.5, 0, -7.54979e-08, 0, 0.5, 0, 7.54979e-08, 0, -0.5, 16, 1.9018, 15 )

[node name="Podium" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3, 0 )

[node name="Labels" type="Node2D" parent="."]
position = Vector2( 172.859, 250.309 )

[node name="6x6info" type="Node2D" parent="Labels"]

[node name="6x6_label_tick" type="Sprite" parent="Labels/6x6info"]
visible = false
texture = ExtResource( 22 )

[node name="6x6_label_untick" type="Sprite" parent="Labels/6x6info"]
visible = false
texture = ExtResource( 14 )

[node name="bmwinfo" type="Node2D" parent="Labels"]
visible = false

[node name="bmw_label_untick" type="Sprite" parent="Labels/bmwinfo"]
visible = false
texture = ExtResource( 21 )

[node name="bmw_label_tick" type="Sprite" parent="Labels/bmwinfo"]
visible = false
texture = ExtResource( 16 )

[node name="limoinfo" type="Node2D" parent="Labels"]
visible = false

[node name="Limo_label_untick" type="Sprite" parent="Labels/limoinfo"]
visible = false
texture = ExtResource( 18 )

[node name="Limo_label_tick" type="Sprite" parent="Labels/limoinfo"]
visible = false
texture = ExtResource( 19 )

[node name="suvinfo" type="Node2D" parent="Labels"]
visible = false

[node name="Suv_label_tick" type="Sprite" parent="Labels/suvinfo"]
visible = false
texture = ExtResource( 24 )

[node name="Suv_label_untick" type="Sprite" parent="Labels/suvinfo"]
visible = false
texture = ExtResource( 17 )

[node name="nissianinfo" type="Node2D" parent="Labels"]
visible = false

[node name="Nissian_label_tick" type="Sprite" parent="Labels/nissianinfo"]
visible = false
texture = ExtResource( 20 )

[node name="Nissian_label_untick" type="Sprite" parent="Labels/nissianinfo"]
visible = false
texture = ExtResource( 23 )
[connection signal="timeout" from="ChangingVehicles" to="." method="_on_ChangingVehicles_timeout"]
[connection signal="pressed" from="Loadscene" to="Loadscene" method="_on_Loadscene_pressed"]
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Previous" to="." method="_on_Previous_pressed"]

[editable path="SUV"]

[editable path="SportsCar"]

[editable path="SixbySix"]

[editable path="Nissian"]

[editable path="BMW"]

[editable path="Limo"]
